--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,7 @@ export(svd_tune)
 export(visualize_ratings)
 import(Matrix)
 import(RColorBrewer)
+import(data.table)
 import(ggplot2)
 import(gridExtra)
 import(recommenderlab)
